hot fix nav z-index

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Cutive Mono";
-    src: url("https: //fonts.googleapis.com/css?family=Cutive Mono");
+    src: url("https://fonts.googleapis.com/css?family=Cutive Mono");
 }
 
 #root {
@@ -18,6 +18,7 @@
 body {
     font-family: 'Cutive Mono';
     width: 100vw;
+    font-size: 1em;
 }
 
 a {
@@ -495,7 +496,8 @@ body a {
     position: absolute;
     width: 100vw;
     height: 3rem;
-    background-color: rgba(207, 203, 203, 1);
+    background-color: rgba(207, 203, 203);
+    z-index: 2;
 }
 
 .navbar > ul {
